// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/location.proto";

/**
 * Information about a DerFacilityExchange.
 */
message DerFacilityExchangeInfo {

  // A human-friendly name.
  string name = 1;
  
  // A globally-unique identifier for use by machines.
  //string uid = 2;
  string facility_public_key = 2;
  
  // The gRPC compliant URI to access the exchange service at.
  //string endpoint_uri = 3;

  // A primary location related to this exchange.
  //Location location = 4;
  Location location = 3;

  //repeated string known_facilities = 4;

}
