// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/form_data.proto";
import "api/esi/der_route.proto";

/**
 * A filled-in DER facility registration form.
 */
message DerFacilityRegistrationFormData {

  // The routing information.
  DerRoute route = 1;

  // A cryptographic set of random bytes to use with registration.
  // 
  // This nonce is used to support a facility proxy service, so that when the
  // `CompleteDerFacilityRegistration` method is called on the proxy, the
  // facility submitting the registration form can verify the exchange is the
  // same during both interactions.
  bytes facility_nonce = 3;

  // The completed registration form.
  FormData data = 5;

}
