syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/der_route.proto";
import "api/esi/duration_range.proto";

message DerResourceCharacteristicsRequest {

  DerRoute route = 1;

  DurationRange response_time = 2;

}
